package com.directi.training.dip.exercise;

public interface IDatasource {
    public int write(String inpuString);
}
